# opentraces

./: .gitignore  .vercelignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/skills/deploy-site/: SKILL.md
.claude/skills/docs-update/: SKILL.md
.claude/skills/gitsync/: SKILL.md
.claude/skills/opentraces/: SKILL.md
.github/workflows/: publish.yml  update-homebrew.yml
distribution/: PUBLISHING.md
distribution/Formula/: opentraces.rb
scripts/: import_lambda_hermes.py
skill/: SKILL.md
src/opentraces/: __init__.py  __main__.py  cli.py  config.py  inbox.py  paths.py  pipeline.py  state.py  workflow.py
tests/: test_cli_commands.py  test_cli_init.py  test_e2e_dogfood.py  test_e2e_flow.py  test_enrichment.py  test_exporters.py  test_harness_integration.py  test_hooks.py  test_judge.py  test_multi_project_eval.py  test_parser_claude_code.py  test_parser_hermes.py  test_persona_rubrics.py  test_pipeline_version.py  test_preservation.py  test_quality_summary.py  test_raw_reader.py  test_schema.py  test_schema_audit.py  test_security.py  test_tui.py  test_tui_capture.py  test_tui_real_traces.py  test_upload.py
tools/: badge-generator.html  tui_capture.py
web/metrics-worker/: .dev.vars.example  README.md  package-lock.json  package.json  schema.sql  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc  wrangler.local.jsonc.example
web/site/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts
web/site/docs/: mkdocs.yml
web/viewer/: index.html  package-lock.json  package.json  vite.config.ts
(+205 files in other folders)
